# binary-mask

./: CMakeLists.txt  README.md  binary_mask.cpp  binary_mask.h  main.cpp
